--- a/index.html
+++ b/index.html
@@ -6,5 +6,32 @@
     <title>Pulp Fiction</title>
     <link rel="stylesheet" href="/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="card">
+        <div class="content">
+          <h2>Vincent Vega</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+            nesciunt recusandae vitae itaque, atque doloremque id eius
+            consectetur labore praesentium.
+          </p>
+          <a href="#">Read More</a>
+        </div>
+        <img src="images/vincent.png" />
+      </div>
+      <div class="card">
+        <div class="content">
+          <h2>Jules Winnfield</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+            nesciunt recusandae vitae itaque, atque doloremque id eius
+            consectetur labore praesentium.
+          </p>
+          <a href="#">Read More</a>
+        </div>
+        <img src="images/jules.png" />
+      </div>
+    </div>
+  </body>
 </html>
