--- a/index.html
+++ b/index.html
@@ -12,25 +12,33 @@
         <div class="content">
           <h2>Vincent Vega</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-            nesciunt recusandae vitae itaque, atque doloremque id eius
-            consectetur labore praesentium.
+            Vincent Vega is a hitman. He worked in Amsterdam for over three
+            years and recently returned to Los Angeles, where he has been
+            partnered with Jules Winnfield.
           </p>
-          <a href="#">Read More</a>
+          <a
+            href="https://pulpfiction.fandom.com/wiki/Vincent_Vega"
+            target="blank"
+            >Read More</a
+          >
         </div>
-        <img src="images/vincent.png" />
+        <img src="images/vincent-remastered.png" />
       </div>
       <div class="card">
         <div class="content">
           <h2>Jules Winnfield</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-            nesciunt recusandae vitae itaque, atque doloremque id eius
-            consectetur labore praesentium.
+            Jules Winnfield is the deuteragonist of Pulp Fiction. Initially he
+            is a Hitman working alongside Vincent Vega but after revelation, he
+            decides to leave to "Walk the Earth."
           </p>
-          <a href="#">Read More</a>
+          <a
+            href="https://pulpfiction.fandom.com/wiki/Jules_Winnfield"
+            target="blank"
+            >Read More</a
+          >
         </div>
-        <img src="images/jules.png" />
+        <img src="images/jules-remastered.png" />
       </div>
     </div>
   </body>
