changed-photo-location

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             >Read More</a
           >
         </div>
-        <img src="images/vincent-remastered.png" />
+        <img src="photos/vincent-remastered.png" />
       </div>
       <div class="card">
         <div class="content">
@@ -38,7 +38,7 @@
             >Read More</a
           >
         </div>
-        <img src="images/jules-remastered.png" />
+        <img src="photos/jules-remastered.png" />
       </div>
     </div>
   </body>
